// Copyright (c) 2019 Cisco and/or its affiliates.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at:
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package model;

// NetworkFirewallProfile is used to define network firewall profile.
message NetworkFirewallProfile {
     // Profile Name
    string name = 1;

    // Sase Service Instance Name
    string service_instance_name = 2;

    // Direction 
    enum Direction {
        INGRESS = 0;
        EGRESS = 1;
    }
    Direction direction = 3;

    // Interface 
    string interface_name = 4;

    // Firewall Rule
    message FirewallRule {
        string name = 1;
        enum Proto {
            NONE = 0;
            TCP = 1;
            UDP = 2;
            ICMP = 3;
        }
        Proto protocol = 2;
        uint32  src_proto_port = 3;
        uint32  dst_proto_port = 4;
        string  source_cidr = 5;
        string destination_cidr = 6;
        enum Action {
            PERMIT = 0;
            PERMIT_REFLECT = 1;
            DENY = 2;
        }
        Action action = 7;
    }
    // List of Network Firewall Rules
    repeated FirewallRule Rules = 5;
}